[gd_scene load_steps=8 format=3 uid="uid://tpn4i7tqquxj"]

[ext_resource type="Script" path="res://scripts/battle.gd" id="1_r3tcn"]
[ext_resource type="Script" path="res://scripts/player_health_bar.gd" id="2_wb2a0"]
[ext_resource type="Script" path="res://scripts/mana.gd" id="3_vvnan"]
[ext_resource type="Script" path="res://scripts/enemy_health_bar.gd" id="4_karlr"]
[ext_resource type="Script" path="res://scripts/enemy_mana.gd" id="5_2agta"]
[ext_resource type="Script" path="res://scenes/hand_ui.gd" id="6_y48e5"]
[ext_resource type="Script" path="res://scripts/end_button.gd" id="7_au1xc"]

[node name="Game" type="Node2D"]
script = ExtResource("1_r3tcn")

[node name="UI" type="CanvasLayer" parent="."]

[node name="VBoxContainer2" type="VBoxContainer" parent="UI"]
anchors_preset = -1
anchor_right = 0.278
anchor_bottom = 0.363
offset_right = -0.256042
offset_bottom = -123.224

[node name="PlayerUI" type="HBoxContainer" parent="UI/VBoxContainer2"]
layout_mode = 2

[node name="PlayerLabel" type="Label" parent="UI/VBoxContainer2/PlayerUI"]
layout_mode = 2
text = "Player health"

[node name="PlayerHealthBar" type="ProgressBar" parent="UI/VBoxContainer2/PlayerUI"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
show_percentage = false
script = ExtResource("2_wb2a0")

[node name="Label" type="Label" parent="UI/VBoxContainer2/PlayerUI/PlayerHealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/VBoxContainer2/HBoxContainer"]
layout_mode = 2
text = "Mana"

[node name="Mana" type="ProgressBar" parent="UI/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
show_percentage = false
script = ExtResource("3_vvnan")

[node name="Label" type="Label" parent="UI/VBoxContainer2/HBoxContainer/Mana"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="VBoxContainer3" type="VBoxContainer" parent="UI"]
anchors_preset = -1
anchor_left = 0.722
anchor_right = 1.0
anchor_bottom = 0.238
offset_left = 0.25592
offset_bottom = -0.223999
grow_horizontal = 0

[node name="EnemyUI" type="HBoxContainer" parent="UI/VBoxContainer3"]
layout_mode = 2

[node name="EnemyLabel" type="Label" parent="UI/VBoxContainer3/EnemyUI"]
layout_mode = 2
text = "Enemy health"

[node name="EnemyHealthBar" type="ProgressBar" parent="UI/VBoxContainer3/EnemyUI"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
show_percentage = false
script = ExtResource("4_karlr")

[node name="Label" type="Label" parent="UI/VBoxContainer3/EnemyUI/EnemyHealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/VBoxContainer3"]
layout_mode = 2
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/VBoxContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/VBoxContainer3/HBoxContainer"]
layout_mode = 2
text = "Mana"

[node name="EnemyMana" type="ProgressBar" parent="UI/VBoxContainer3/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
show_percentage = false
script = ExtResource("5_2agta")

[node name="Label" type="Label" parent="UI/VBoxContainer3/HBoxContainer/EnemyMana"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="HandUI" type="HBoxContainer" parent="UI"]
unique_name_in_owner = true
anchors_preset = -1
anchor_top = 0.746914
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 3
script = ExtResource("6_y48e5")
metadata/_edit_use_anchors_ = true

[node name="EndButton" type="Button" parent="UI"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.924
anchor_top = 0.934
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -0.447998
offset_top = -0.231995
grow_horizontal = 0
grow_vertical = 0
text = "End turn"
script = ExtResource("7_au1xc")

[node name="ActiveAreaPlayerUI" type="VBoxContainer" parent="UI"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.006
anchor_top = 0.299
anchor_right = 0.284
anchor_bottom = 0.537
offset_left = 0.0879998
offset_top = 0.247986
offset_right = -0.167999
offset_bottom = 0.0239868

[node name="Label" type="Label" parent="UI/ActiveAreaPlayerUI"]
layout_mode = 2
text = "Player Action
"

[node name="ActiveAreaEnemyUI" type="VBoxContainer" parent="UI"]
unique_name_in_owner = true
anchors_preset = -1
anchor_left = 0.722
anchor_top = 0.258
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 0.25592
offset_top = -0.184006
offset_bottom = -3.0

[node name="Label" type="Label" parent="UI/ActiveAreaEnemyUI"]
layout_mode = 2
text = "Enemy Action
"
